[package]
name = 'rc_controller'
version = '0.1.0'
edition = '2021'
[dependencies.hidapi]
version = '2.2.2'
optional = true

[dependencies.bevy]
version = '0.10.1'
optional = true

[dependencies.glam]
version = '0.23.0'
optional = true

[features]
default = [
    'hidapi',
    'SM600',
    'drone',
]
hidapi = ['dep:hidapi']
SM600 = ['hidapi']
bevy = ['dep:bevy']
glam = ['dep:glam']
drone = ['glam']
